BusOne/src/objects/Unsubscribe_vod__c.object
<CustomObject>
    <description>Unsubscribe_vod object stores the information that are used when it is referenced in the unsubscribe link.</description>
    <fields>
        <fullName>Consent_Level_vod__c</fullName>
        <description>Picklist that decides the level of consent on unsubscribe page.</description>
        <label>Consent Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product_vod</fullName>
                </value>
                <value>
                    <fullName>Content_Type_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsubscribe_Cancel_HTML_vod__c</fullName>
        <description>Unsubscribe_HTML_vod holds the HTML that will be used for the cancel page when the recipient cancels the changes on the unsubscribe page.</description>
        <label>Unsubscribe Cancel HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Confirm_HTML_vod__c</fullName>
        <description>Unsubscribe_HTML_vod holds the HTML that will be used for the confirmation page when the recipient clicks on the unsubscribe button.</description>
        <label>Unsubscribe Confirm HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_HTML_vod__c</fullName>
        <description>Unsubscribe_HTML_vod holds the HTML that will be used for the unsubscribe page when the recipient clicks on the unsubscribe link that used.</description>
        <label>Unsubscribe HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Identifier_vod__c</fullName>
        <description>Unsubscribe_Identifier_vod is a unique field which will be used as the parameter in the unsubscribe token to identify the associated Unsubscribe_vod record.</description>
        <label>Unsubscribe Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unsubscribe_Modify_Confirm_HTML_vod__c</fullName>
        <description>Unsubscribe_HTML_vod holds the HTML that will be used for the confirmation page when the recipient clicks on the Save changes button from the unsubscribe page.</description>
        <label>Unsubscribe Modify Confirm HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Unsubscribe</label>
    <nameField>
        <label>Unsubscribe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unsubscribes</pluralLabel>
    <recordTypes>
        <fullName>Approved_Email_Unsubscribe_vod</fullName>
        <active>true</active>
        <description>Record type of those Unsubscribe_vod records that will be used as a parameter for Aproved Email Unsubscribe page</description>
        <label>Approved_Email_Unsubscribe_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>